# feedSummaryBase

./: README.md  pyproject.toml
.github/workflows/: release.yaml
src/feedsummary_core/: __init__.py
src/feedsummary_core/llm_client/: __init__.py  fallback_client.py  ollama_cloud.py  ollama_local.py
src/feedsummary_core/persistence/: CleanUpPolicy.py  SqliteStore.py  TinyDbStore.py  __init__.py  helpers.py
src/feedsummary_core/prompts/: loader.py
src/feedsummary_core/summarizer/: __init__.py  batching.py  chat.py  helpers.py  ingest.py  main.py  prompt_lab.py  prompt_replay.py  summarizer.py  token_budget.py
